# strike_crew

./: .gitignore  README.md  langchain_tool_documentation.md  pyproject.toml  threat_intelligence_output_20240808_151930.json  threat_intelligence_report_20240808_151930.txt
myenv/: pyvenv.cfg
src/strike_crew/: config.py  config_loader.py  crew.py  crew_manager.py  llm.py  main.py  models.py  utils.py  workflow.py
src/strike_crew/config/: agents.yaml  tasks.yaml
src/strike_crew/tools/: custom_tool.py  neo4Database.py
strike_crew/: .gitignore  README.md
strike_crew/src/strike_crew/: crew.py  main.py
strike_crew/src/strike_crew/config/: agents.yaml  tasks.yaml
strike_crew/src/strike_crew/tools/: custom_tool.py
tests/: test_custom_tool.py  test_neo4j_connection.py  test_neo4j_search_tool.py  test_neo4j_update_tool.py  test_nlp_tool.py  test_web_scraper.py  test_web_search.py
