[tool.poetry]
name = "strike_crew"
version = "0.1.0"
description = "strike_crew using crewAI"
authors = ["Gideon Crawley"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.36.1"
tweepy = "^4.14.0"
neo4j = "^5.22.0"
groq = "^0.9.0"
crewai-tools = "^0.4.8"

[tool.poetry.scripts]
strike_crew = "strike_crew.main:main"
train = "strike_crew.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
